cabal-version:       2.2

name:                gemini-router
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          fgaz@fgaz.me
-- copyright:
category:            Gemini
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Network.Gemini.Router
  -- other-modules:
  other-extensions:    FlexibleInstances
  build-depends:       base
                     , gemini-server
                     , transformers
                     , network-uri
  -- hs-source-dirs:
  default-language:    Haskell2010

