cabal-version:       2.2

name:                gemini-router
version:             0.1.0.0
synopsis:            A simple Happstack-style Gemini router
-- description:
homepage:            https://sr.ht/~fgaz/haskell-gemini/
bug-reports:         https://todo.sr.ht/~fgaz/haskell-gemini
license:             BSD-3-Clause
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          Francesco Gazzetta <fgaz@fgaz.me>
copyright:           © 2020 Francesco Gazzetta and contributors
category:            Gemini
extra-source-files:  CHANGELOG.md

source-repository head
  type:                git
  location:            https://git.sr.ht/~fgaz/gemini-router

library
  exposed-modules:     Network.Gemini.Router
  -- other-modules:
  other-extensions:    FlexibleInstances, CPP
  build-depends:       base ^>=4.13.0.0 || ^>=4.14.0.0
                     , gemini-server ^>=0.1.0.0
                     , transformers ^>=0.5.6.2
                     , network-uri ^>=2.6.3.0 || ^>=2.7.0.0
  -- hs-source-dirs:
  default-language:    Haskell2010

